<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/sub_title_height"
        android:text="@string/title"
        android:id="@+id/tv_title"
        android:textColor="@color/white"
        android:gravity="center_vertical|center_horizontal"
        android:background="@color/sub_title_bg_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:layout_width="@dimen/advertising_image_width"
            android:layout_height="@dimen/advertising_image_height"
            android:id="@+id/img_promotion"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_advertising"
        android:hint="TEXT HERE"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="8dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/advertising_button_height"
            android:text="@string/buy_now"
            android:id="@+id/btn_buy_now"
            android:background="@color/btn_bg_color"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/advertising_button_height"
            android:text="@string/show"
            android:id="@+id/btn_show"
            android:background="@color/btn_bg_color"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/advertising_button_height"
            android:text="@string/call"
            android:id="@+id/btn_call"
            android:background="@color/btn_bg_color"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp" />
    </LinearLayout>

</LinearLayout>