<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.daimajia.slider.library.SliderLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/flash_advertisement_height"
        custom:auto_cycle="true"
        custom:indicator_visibility="invisible"
        android:id="@+id/advertisement">

    </com.daimajia.slider.library.SliderLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_row_height"
        android:gravity="center"
        android:background="@color/gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/workshop_nearby_lowercase"
            android:id="@+id/textView16" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_row_height"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_item_left_margin"
        android:paddingRight="@dimen/list_item_right_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textView3"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_marginLeft="92dp"
            android:background="@drawable/green_stroke_rectangle" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_row_height"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/list_item_left_margin"
        android:paddingRight="@dimen/list_item_right_margin"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_service"
            android:id="@+id/textView4"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_dtopdown_menu"
            android:layout_marginLeft="16dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_row_height"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:id="@+id/btn_search"
            android:layout_gravity="center_horizontal"
            android:text="@string/search"
            android:background="@drawable/blue_rounded_rectangle" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activity.SearchActivity"
        android:layout_weight="0.1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_navigation_height"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout4"
        android:weightSum="1" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/home">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/imageView11"
                android:src="@drawable/ic_home"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:id="@+id/textView13"
                android:layout_below="@+id/imageView11"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
